Moved sidebar to the side

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -21,15 +21,29 @@
 					</div>
 				</div>
 				<div class="sidebar u-marginLeft--more u-marginTop--more">
+					<div class="u-marginTop--more u-marginBottom--more">
+						<h3 class="u-fontWeight--medium u-borderBottom--gray u-paddingBottom--normal u-marginBottom--normal">Similar guides</h3>
+						<ul>
+							<li class="u-paddingBottom--normal u-fontSize--normal">
+								<a href="" class="u-color--curiousBlue ">Test Link</a>
+							</li>
+							<li class="u-paddingBottom--normal u-fontSize--normal">
+								<a href="" class="u-color--curiousBlue ">Test Link</a>
+							</li>
+							<li class="u-paddingBottom--normal u-fontSize--normal">
+								<a href="" class="u-color--curiousBlue ">Test Link</a>
+							</li>
+						</ul>
+					</div>
 					<div>
 						<h3 class="u-fontWeight--medium u-borderBottom--gray u-paddingBottom--normal u-marginBottom--normal">Tags</h3>
 						<ul id="tags">
-						{{ range .Params.tags }}
-						<li class="u-display--inlineBlock">
-							<a href="{{ "/tags/" | relLangURL }}{{ . | urlize }}" class="u-display--inlineBlock">{{ . }}</a>
-						</li>
-						{{ end }}
-					</ul>
+							{{ range .Params.tags }}
+							<li class="u-display--inlineBlock">
+								<a href="{{ "/tags/" | relLangURL }}{{ . | urlize }}" class="u-display--inlineBlock">{{ . }}</a>
+							</li>
+							{{ end }}
+						</ul>
 					</div>
 				</div>
 			</div>
