--- a/static/css/utilities/colors.css
+++ b/static/css/utilities/colors.css
@@ -1,4 +1,5 @@
 .u-color--dustyGray { color: #9B9B9B; }
+.u-color--silverSand { color: #C4C7CA; }
 .u-color--tuna { color: #323232; }
 .u-color--tundora { color: #4A4A4A; }
 .u-color--white { color: #ffffff; }
