fix styles to work with generated vendor api doc pages

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -15,7 +15,7 @@
 			</div>
 			<div class="container flex flexWrap--noWrap">
 				<div class="paddingContainer">
-					<div class="content">
+					<div class="page-content">
 						{{ .Content }}
 					</div>
 				</div>
