--- a/static/css/pages/single.css
+++ b/static/css/pages/single.css
@@ -25,13 +25,14 @@
 }
 
 #tags li a {
-    padding: 5px 10px;
+    padding: 4px 10px 5px;
     background: #F5F8FC;
     border: solid 1px #979797;
     border-radius: 2px;
     margin: 4px 2px;
-    font-size: 10px;
-    color: #979797;
+    font-size: 11px;
+    font-weight: 500;
+    color: #9B9B9B;
 }
 
 .page-content {
@@ -158,16 +159,10 @@
     max-width: 100%;
 }
 
-.single .container.flex {
-    flex-wrap: wrap;
-}
-
 .sidebar {
-    margin-left: 0;
     width: 100%;
     margin-bottom: 20px;
-    max-width: 180px;
-    padding: 30px 0;
+    padding: 10px 0;
 }
 
 /* admonition notes */
@@ -218,15 +213,18 @@
     height: 17px;
 }
 
-@media screen and (max-width: 48em) {
-    .single .container.flex {
-        flex-wrap: wrap;
+@media screen and (min-width: 48em) {
+    .page-content-wrapper {
+        padding-right: 30px;
+        width: 74%
     }
-
+    .sidebar-wrapper {
+        width: 24%;
+    }
+    .page-content {
+        padding: 50px 0;
+    }
     .sidebar {
-        padding: 0;
-        margin-left: 0;
-        margin-bottom: 20px;
-        max-width: 100%;
+        max-width: 180px;
     }
 }
