--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -11,8 +11,9 @@
 	<script src="https://cdn.jsdelivr.net/algoliasearch/3/algoliasearch.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/autocomplete.js/0/autocomplete.min.js"></script>
 	<script src="{{ .Site.BaseURL }}js/autocomplete-search.js"></script>
-	
+	<script src="{{ .Site.BaseURL }}js/prism.js"></script>
 	<script>
+		hljs.initHighlightingOnLoad();
 		function toggleMenuClass() {
 			this.classList.toggle("open");
 			document.getElementById("headerLinks").classList.toggle("show");
