--- a/static/css/utilities/base.css
+++ b/static/css/utilities/base.css
@@ -24,7 +24,9 @@ code {
   background-color: #f9f2f4;
   border-radius: 4px;
 }
-
+pre code {
+  padding: 0;
+}
 .container {
   width: 100%;
   max-width: 1040px;
