--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -38,10 +38,12 @@
 					<div>
 						<h3 class="u-fontWeight--medium u-borderBottom--gray u-paddingBottom--normal u-marginBottom--normal">Tags</h3>
 						<ul id="tags">
-							{{ range .Params.tags }}
-							<li class="u-display--inlineBlock">
-								<a href="{{ "/tags/" | relLangURL }}{{ . | urlize }}" class="u-display--inlineBlock">{{ . }}</a>
-							</li>
+							{{ if .Params.tags }}
+								{{ range .Params.tags }}
+									<li class="u-display--inlineBlock">
+										<a href="{{ "/tags/" | relLangURL }}{{ . | urlize }}" class="u-display--inlineBlock">{{ . }}</a>
+									</li>
+								{{ end }}
 							{{ end }}
 						</ul>
 					</div>
