--- a/layouts/partials/summary.html
+++ b/layouts/partials/summary.html
@@ -1,13 +1,8 @@
-	<article>
-		<h1><a href="{{ .Permalink }}">{{ .Title }}</a></h1>
-		<time>{{ .Date.Format "02.01.2006 15:04" }}</time>
-		{{ range .Params.tags }}
-		<a href="{{ "/tags/" | relLangURL }}{{ . | urlize }}">{{ . }}</a>
-		{{ end }}
-		<div>
-			{{ .Summary }}
-			{{ if .Truncated }}
-				<a href="{{ .Permalink }}">Read more...</a>
-			{{ end }}
-		</div>
-	</article>
+<li>
+   <a href="/{{ .Permalink }}">
+    	<p class="u-fontSize--largest u-fontWeight--medium list-title">{{ .Title }}</p>
+         {{ if .Params.description }}
+         <p class="u-fontSize--large u-color--dustyGray u-marginTop--normal u-lineHeight--normal">{{ .Params.description }}</p>
+        {{ end }}
+    </a>
+</li>
