--- a/layouts/partials/footer-items.html
+++ b/layouts/partials/footer-items.html
@@ -5,7 +5,7 @@
         <img width="130" src="{{ .Site.BaseURL }}images/footer_logo@2x.png"/>
       </a>
     </div>
-    <div class="u-fontSize--small u-color--dustyGray u-marginBottom--small u-hidden--mobileTablet">&copy; {{ now.Year }}, <a>Replicated Inc.</a></div>
+    <div class="u-fontSize--small u-color--dustyGray u-marginBottom--small u-hidden--mobileTablet">&copy; {{ now.Format "2006" }},<a> Replicated Inc.</a></div>
     <div class="u-fontSize--small u-color--dustyGray u-hidden--mobileTablet">All Rights Reserved</div>
   </div>
 </div><!--
