--- a/layouts/partials/autocompletesearch_section.html
+++ b/layouts/partials/autocompletesearch_section.html
@@ -3,7 +3,9 @@
       <h1 class="u-color--white u-fontWeight--bold u-fontSize--header u-textAlign--center">Help Center</h1>
       <div class="search-wrapper">
         <div class="paddingContainer">
-          <input type="text" class="search-box Input" id="autocompletesearch-box" />
+          <div class="input-wrap u-position--relative">
+            <input type="text" class="search-box Input" id="autocompletesearch-box" placeholder="Search support topics, questions, etc…" />
+          </div>
         </div>
       </div>
     </div>
