--- a/layouts/partials/instantsearch_section.html
+++ b/layouts/partials/instantsearch_section.html
@@ -2,7 +2,11 @@
     <div class="container">
       <h1 class="u-color--white u-fontWeight--bold u-fontSize--header u-textAlign--center">Help Center</h1>
       <div class="search-wrapper">
-        <input type="text" class="search-box" id="instantsearch-box" />
+          <div class="paddingContainer">
+              <div class="input-wrap u-position--relative">
+                <input type="text" class="search-box Input" id="instantsearch-box" placeholder="Search support topics, questions, etc…" />
+              </div>
+          </div>
       </div>
     </div>
   </div>
