--- a/static/css/sections/search.css
+++ b/static/css/sections/search.css
@@ -12,7 +12,10 @@
 }
 .search-wrapper input {
   width: 100%;
-  padding: 0 15px;
+  padding: 0 15px 0 40px;
+}
+.search-wrapper input:focus {
+  border-color: #863333;
 }
 
 .algolia-autocomplete {
@@ -104,5 +107,16 @@
   height: 40px;
   max-width: 100%;
 }
-
-
+.input-wrap::before {
+  position: absolute;
+  content: "";
+  background-image: url("../../images/main_spritesheet.svg");
+  background-repeat: no-repeat;
+  background-size: initial;
+  background-position: -70px -172px;
+  width: 20px;
+  height: 20px;
+  top: 10px;
+  left: 10px;
+  z-index: 2;
+}
