--- a/static/css/utilities/icons.css
+++ b/static/css/utilities/icons.css
@@ -28,6 +28,11 @@
   width: 14px;
   height: 14px;
 }
+.icon.u-searchIcon {
+  background-position: -70px -172px;
+  width: 20px;
+  height: 20px;
+}
 
 .icon.u-beginnerWings {
   background-position: 0 -256px;
