--- a/layouts/partials/documentation_reference_section.html
+++ b/layouts/partials/documentation_reference_section.html
@@ -12,15 +12,15 @@
             <div class="doc-ref">
               <p class="u-fontSize--largest u-fontWeight--medium u-color--tuna">Getting Started</p>
               <ul>
-                {{ range $index, $element := first 6 $.Site.Data.docs.categories.help_center_getting_started }}
+                {{ range $index, $element := first 6 (index $.Site.Taxonomies.categories "getting-started").Pages }}
                   <li>
-                    <a href={{ $element.uri }} class="u-color--curiousBlue u-textDecoration--underlineOnHover">{{ $element.title }}</a>
+                    <a href="{{ .Permalink }}" class="u-color--curiousBlue u-textDecoration--underlineOnHover">{{ .Title }}</a>
                   </li>
                 {{ end }}
               </ul>
-              {{ with $list := $.Site.Data.docs.categories.help_center_getting_started }}
+              {{ with $list := (index $.Site.Taxonomies.categories "getting-started") }}
                 {{ if gt (len $list) 6 }}
-                  <a href="/docs/getting-started" class="more-items u-borderAll--gray u-fontSize--small u-color--curiousBlue">+ {{ (len $list) sub 6 }} More</a>
+                  <a href="/categories/getting-started" class="more-items u-borderAll--gray u-fontSize--small u-color--curiousBlue">+ {{ (len $list) sub 6 }} More</a>
                 {{ end }}
               {{ end }}
             </div>
@@ -29,15 +29,15 @@
             <div class="doc-ref">
               <p class="u-fontSize--largest u-fontWeight--medium u-color--tuna">Packaging An Application</p>
               <ul>
-                {{ range $index, $element := first 6 $.Site.Data.docs.categories.help_center_packaging }}
+                {{ range $index, $element := first 6 (index $.Site.Taxonomies.categories "packaging-an-application").Pages }}
                   <li>
-                    <a href={{ $element.uri }} class="u-color--curiousBlue u-textDecoration--underlineOnHover">{{ $element.title }}</a>
+                    <a href="{{ .Permalink }}" class="u-color--curiousBlue u-textDecoration--underlineOnHover">{{ .Title }}</a>
                   </li>
                 {{ end }}
               </ul>
-              {{ with $list := $.Site.Data.docs.categories.help_center_packaging }}
+              {{ with $list := (index $.Site.Taxonomies.categories "packaging-an-application") }}
                 {{ if gt (len $list) 6 }}
-                  <a href="/docs/packaging-an-application" class="more-items u-borderAll--gray u-fontSize--small u-color--curiousBlue">+ {{ (len $list) sub 6 }} More</a>
+                  <a href="/categories/packaging-an-application" class="more-items u-borderAll--gray u-fontSize--small u-color--curiousBlue">+ {{ (len $list) sub 6 }} More</a>
                 {{ end }}
               {{ end }}
             </div>
@@ -46,15 +46,15 @@
             <div class="doc-ref">
               <p class="u-fontSize--largest u-fontWeight--medium u-color--tuna">Distributing An Application</p>
               <ul>
-                {{ range $index, $element := first 6 $.Site.Data.docs.categories.help_center_distributing }}
+                {{ range $index, $element := first 6 (index $.Site.Taxonomies.categories "distributing-an-application").Pages }}
                   <li>
-                    <a href={{ $element.uri }} class="u-color--curiousBlue u-textDecoration--underlineOnHover">{{ $element.title }}</a>
+                    <a href="{{ .Permalink }}" class="u-color--curiousBlue u-textDecoration--underlineOnHover">{{ .Title }}</a>
                   </li>
                 {{ end }}
               </ul>
-              {{ with $list := $.Site.Data.docs.categories.help_center_distributing }}
+              {{ with $list := (index $.Site.Taxonomies.categories "distributing-an-application") }}
                 {{ if gt (len $list) 6 }}
-                  <a href="/docs/distributing-an-application" class="more-items u-borderAll--gray u-fontSize--small u-color--curiousBlue">+ {{ (len $list) sub 6 }} More</a>
+                  <a href="/categories/distributing-an-application" class="more-items u-borderAll--gray u-fontSize--small u-color--curiousBlue">+ {{ (len $list) sub 6 }} More</a>
                 {{ end }}
               {{ end }}
             </div>
@@ -63,13 +63,13 @@
             <div class="doc-ref">
               <p class="u-fontSize--largest u-fontWeight--medium u-color--tuna">Examples</p>
               <ul>
-                {{ range $index, $element := first 6 $.Site.Data.docs.categories.help_center_examples }}
+                {{ range $index, $element := first 6 ($.Site.Taxonomies.categories.examples).Pages }}
                   <li>
-                    <a href={{ $element.uri }} class="u-color--curiousBlue u-textDecoration--underlineOnHover">{{ $element.title }}</a>
+                    <a href="{{ .Permalink }}" class="u-color--curiousBlue u-textDecoration--underlineOnHover">{{ .Title }}</a>
                   </li>
                 {{ end }}
               </ul>
-              {{ with $list := $.Site.Data.docs.categories.help_center_examples }}
+              {{ with $list := $.Site.Taxonomies.categories.examples }}
                 {{ if gt (len $list) 6 }}
                   <a href="/docs/examples" class="more-items u-borderAll--gray u-fontSize--small u-color--curiousBlue">+ {{ (len $list) sub 6 }} More</a>
                 {{ end }}
@@ -80,13 +80,13 @@
             <div class="doc-ref">
               <p class="u-fontSize--largest u-fontWeight--medium u-color--tuna">Reference</p>
               <ul>
-                {{ range $index, $element := $.Site.Data.docs.categories.help_center_reference }}
+                {{ range $index, $element := ($.Site.Taxonomies.categories.reference).Pages }}
                   <li>
-                    <a href={{ $element.uri }} class="u-color--curiousBlue u-textDecoration--underlineOnHover">{{ $element.title }}</a>
+                    <a href="{{ .Permalink }}" class="u-color--curiousBlue u-textDecoration--underlineOnHover">{{ .Title }}</a>
                   </li>
                 {{ end }}
               </ul>
-              {{ with $list := $.Site.Data.docs.categories.help_center_reference }}
+              {{ with $list := $.Site.Taxonomies.categories.reference }}
                 {{ if gt (len $list) 6 }}
                   <a href="" class="more-items u-borderAll--gray u-fontSize--small u-color--curiousBlue">+ {{ (len $list) sub 6 }} More</a>
                 {{ end }}
@@ -97,15 +97,15 @@
             <div class="doc-ref">
               <p class="u-fontSize--largest u-fontWeight--medium u-color--tuna">Knowledge Base</p>
               <ul>
-                {{ range $index, $element := first 6 $.Site.Data.docs.categories.help_center_knowledgebase }}
+                {{ range $index, $element := first 6 ($.Site.Taxonomies.categories.knowledgebase).Pages }}
                   <li>
-                    <a href={{ $element.uri }} class="u-color--curiousBlue u-textDecoration--underlineOnHover">{{ $element.title }}</a>
+                    <a href="{{ .Permalink }}" class="u-color--curiousBlue u-textDecoration--underlineOnHover">{{ .Title }}</a>
                   </li>
                 {{ end }}
               </ul>
-              {{ with $list := $.Site.Data.docs.categories.help_center_knowledgebase }}
+              {{ with $list := $.Site.Taxonomies.categories.knowledgebase }}
                 {{ if gt (len $list) 6 }}
-                  <a href="/docs/kb" class="more-items u-borderAll--gray u-fontSize--small u-color--curiousBlue">+ {{ (len $list) sub 6 }} More</a>
+                  <a href="/categories/knowledgebase" class="more-items u-borderAll--gray u-fontSize--small u-color--curiousBlue">+ {{ (len $list) sub 6 }} More</a>
                 {{ end }}
               {{ end }}
             </div>
