--- a/layouts/taxonomy/tag.html
+++ b/layouts/taxonomy/tag.html
@@ -7,9 +7,8 @@
 							<div class="flex-auto">
 								<span class="icon u-docsHeaderIcon u-marginRight--normal"></span>
 							</div>
-							<div class="flex-auto">
-								<h3 class="u-color--white u-fontWeight--bold u-fontSize--header">Documentation</h3>
-								<p class="u-fontSize--normal u-fontWeight--medium u-color--white u-marginTop--small">Quickly find docs for whatever you need help with.</p>
+							<div class="flex-auto u-paddingTop--normal">
+								<h3 class="u-color--white u-fontWeight--bold u-fontSize--header">{{ .Title }}</h3>
 							</div>
 						</div>
 					</div>
@@ -19,7 +18,7 @@
 				<div class="container">
 					<div class="paddingContainer">
 						<ul class="single-cat-docs-list">
-                        {{ range sort .Paginator.Pages }}
+                        {{ range sort .Pages }}
                             {{ partial "summary.html" . }}
                         {{ end }}
 						</ul>
@@ -30,5 +29,4 @@
 				{{ template "_internal/disqus.html" . }}
 			</div>
 		</article>
-        {{ partial "pagination.html" . }}
     {{ partial "footer.html" . }}
