--- a/static/css/pages/single.css
+++ b/static/css/pages/single.css
@@ -220,6 +220,7 @@
     }
     .sidebar-wrapper {
         width: 24%;
+        margin-top: 20px;
     }
     .page-content {
         padding: 50px 0;
