--- a/layouts/taxonomy/category.html
+++ b/layouts/taxonomy/category.html
@@ -5,11 +5,8 @@
 					<div class="paddingContainer">
 						<div class="flex flex-auto justifyContent--center u-marginTop--more">
 							<div class="flex-auto">
-								<span class="icon u-docsHeaderIcon u-marginRight--normal"></span>
-							</div>
-							<div class="flex-auto">
 								<h3 class="u-color--white u-fontWeight--bold u-fontSize--header">{{ .Title }}</h3>
-                                <p class="u-fontSize--normal u-fontWeight--medium u-color--white u-marginTop--small">{{ .Description }}</p>
+                                <p class="u-fontSize--normal u-fontWeight--medium u-color--white u-marginTop--normal">{{ .Description }}</p>
 							</div>
 						</div>
 					</div>
