--- a/layouts/taxonomy/tag.html
+++ b/layouts/taxonomy/tag.html
@@ -5,10 +5,7 @@
 					<div class="paddingContainer">
 						<div class="flex flex-auto justifyContent--center u-marginTop--more">
 							<div class="flex-auto">
-								<span class="icon u-docsHeaderIcon u-marginRight--normal"></span>
-							</div>
-							<div class="flex-auto u-paddingTop--normal">
-								<h3 class="u-color--white u-fontWeight--bold u-fontSize--header">{{ .Title }}</h3>
+								<h3 class="u-color--white u-fontWeight--bold u-fontSize--header">Docs with the tag "{{ .Title }}"</h3>
 							</div>
 						</div>
 					</div>
