--- a/static/css/pages/single.css
+++ b/static/css/pages/single.css
@@ -194,6 +194,7 @@
     position: relative;
 }
 .page-content .admonition p.admonition-title::before {
+    content: "";
     background-image: url("../../images/main_spritesheet.svg");
     background-repeat: no-repeat;
     background-size: initial;
@@ -201,7 +202,6 @@
     background-position: -70px -74px;
     width: 13px;
     height: 20px;
-    page-content: "";
     position: absolute;
     left: 0;
     top: 4px;
