--- a/layouts/partials/summary.html
+++ b/layouts/partials/summary.html
@@ -1,5 +1,5 @@
 <li>
-   <a href="/{{ .Permalink }}">
+   <a href="{{ .Permalink }}">
     	<p class="u-fontSize--largest u-fontWeight--medium list-title">{{ .Title }}</p>
          {{ if .Params.description }}
          <p class="u-fontSize--large u-color--dustyGray u-marginTop--normal u-lineHeight--normal">{{ .Params.description }}</p>
