add schedulers page with sections for each type of scheduler

--- a/layouts/partials/scheduler_section.html
+++ b/layouts/partials/scheduler_section.html
@@ -13,49 +13,44 @@
             <div class="scheduler-wrapper flex1">
               <div class="scheduler">
                 <div class="icon-wrapper flex-column justifyContent--center">
-                  <span class="icon replicatedLogo"></span>
+                  <span class="replicatedLogo"></span>
                 </div>
                 <div>
                   <p class="u-fontSize--largest u-color--tuna u-fontWeight--medium u-marginBottom--normal">Replicated</p>
                   <p class="u-fontSize--large u-color--dustyGray u-lineHeight--normal">The Replicated scheduler is a mature container orchestration runtime that supports Docker 1.7.1 and newer.</p>
                 </div>
-                <div class="u-marginTop--more">
-                  <a class="learn-more-link u-position--relative u-color--curiousBlue u-cursor--pointer u-fontSize--large u-fontWeight--medium">Learn more</a>
-                </div>
               </div>
             </div>
 
             <div class="scheduler-wrapper flex1">
               <div class="scheduler">
                 <div class="icon-wrapper flex-column justifyContent--center">
-                  <span class="icon kubernetesLogo"></span>
+                  <span class="kubernetesLogo"></span>
                 </div>
                 <div>
                   <p class="u-fontSize--largest u-color--tuna u-fontWeight--medium u-marginBottom--normal">Kubernetes</p>
                   <p class="u-fontSize--large u-color--dustyGray u-lineHeight--normal">Kubernetes is a powerful and popular container orchestration and runtime that's quickly gaining popularity.</p>
                 </div>
-                <div class="u-marginTop--more">
-                  <a class="learn-more-link u-position--relative u-color--curiousBlue u-cursor--pointer u-fontSize--large u-fontWeight--medium">Learn more</a>
-                </div>
               </div>
             </div>
 
             <div class="scheduler-wrapper flex1">
               <div class="scheduler">
                 <div class="icon-wrapper flex-column justifyContent--center">
-                  <span class="icon dockerSwarmLogo"></span>
+                  <span class="dockerSwarmLogo"></span>
                 </div>
                 <div>
                   <p class="u-fontSize--largest u-color--tuna u-fontWeight--medium u-marginBottom--normal">Docker Swarm</p>
-                  <p class="u-fontSize--large u-color--dustyGray u-lineHeight--normal">Docker Swarm is great if you have existing docker-compose yaml and want to target servers running Docker 1.13.1 or newer.</p>
-                  <div class="u-marginTop--more">
-                    <a class="learn-more-link u-position--relative u-color--curiousBlue u-cursor--pointer u-fontSize--large u-fontWeight--medium">Learn more</a>
-                  </div>
+                  <p class="u-fontSize--large u-color--dustyGray u-lineHeight--normal">Use Docker Swarm if you have existing docker-compose yaml and want to target servers running Docker 1.13.1 or newer.</p>
                 </div>
               </div>
             </div>
 
           </div>
+        </div>
+
+        <div class="u-marginTop--most u-textAlign--center">
+          <a href="/schedulers" class="Button secondary">Discover &amp; compare schedulers</a>
         </div>
 
     </div>
