--- a/static/css/sections/footer.css
+++ b/static/css/sections/footer.css
@@ -1,6 +1,6 @@
 footer {
   padding: 20px 0 35px;
-  border-top: 1px solid #DFDFDF;
+  border-top: 1px solid #C4C7CA;
 }
 .footer-list {
   display: block;
