--- a/static/css/utilities/gradients.css
+++ b/static/css/utilities/gradients.css
@@ -48,3 +48,13 @@
   background: linear-gradient(135deg, rgba(51,189,189,1) 0%, rgba(122,214,152,1) 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#33bdbd', endColorstr='#7ad698', GradientType=1 );
 }
+.u-gradient--blueToBlue {
+  background: rgba(52,121,191,1);
+  background: -moz-linear-gradient(-45deg, rgba(52,121,191,1) 0%, rgba(126,211,254,1) 100%);
+  background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(52,121,191,1)), color-stop(100%, rgba(126,211,254,1)));
+  background: -webkit-linear-gradient(-45deg, rgba(52,121,191,1) 0%, rgba(126,211,254,1) 100%);
+  background: -o-linear-gradient(-45deg, rgba(52,121,191,1) 0%, rgba(126,211,254,1) 100%);
+  background: -ms-linear-gradient(-45deg, rgba(52,121,191,1) 0%, rgba(126,211,254,1) 100%);
+  background: linear-gradient(135deg, rgba(52,121,191,1) 0%, rgba(126,211,254,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3479bf', endColorstr='#7ed3fe', GradientType=1 );
+}
