build out comparison table section on schedulers page

--- a/layouts/schedulers/list.html
+++ b/layouts/schedulers/list.html
@@ -9,7 +9,6 @@
       </div>
     </div>
     <div class="scheduler-types-section">
-
       <div class="scheduler-type main-section u-borderBottom--gray">
         <div class="container">
           <div class="paddingContainer">
@@ -74,7 +73,7 @@
         </div>
       </div>
 
-      <div class="scheduler-type main-section">
+      <div class="scheduler-type main-section u-borderBottom--gray">
         <div class="container">
           <div class="paddingContainer">
             <div class="u-flexTabletReflow">
@@ -105,7 +104,71 @@
           </div>
         </div>
       </div>
+    </div>
 
+    <div class="compare-section-wrapper">
+      <div class="compare-section main-section">
+        <div class="container">
+          <div class="paddingContainer">
+            <div class="header-wrapper u-textAlign--center">
+              <p class="u-color--tuna u-fontWeight--bold u-fontSize--header u-marginBottom--normal">So, which one is right for you?</p>
+              <p class="u-fontSize--large u-fontWeight--medium u-color--dustyGray u-lineHeight--normal">Compare all the features side-by-side to help you make your decision.</p>
+            </div>
+            <div class="table-section-wrapper u-marginTop--most">
+              <div class="table-wrapper">
+                <table>
+                  <thead>
+                    <tr>
+                      <th></th>
+                      <th><span class="replicatedLogo"></span></th>
+                      <th><span class="kubernetesLogo"></span></th>
+                      <th><span class="dockerSwarmLogo"></span></th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>Some feature name</td>
+                      <td class="icon-cell"><span class="icon u-greenCheckCircle"></span></td>
+                      <td class="icon-cell"><span class="icon u-grayFailCircle"></span></td>
+                      <td class="icon-cell"><span class="icon u-greenCheckCircle"></span></td>
+                    </tr>
+                    <tr>
+                      <td>Some feature name</td>
+                      <td class="icon-cell"><span class="icon u-grayFailCircle"></span></td>
+                      <td class="icon-cell"><span class="icon u-greenCheckCircle"></span></td>
+                      <td class="icon-cell"><span class="icon u-grayFailCircle"></span></td>
+                    </tr>
+                    <tr>
+                      <td>Some feature name</td>
+                      <td class="icon-cell"><span class="icon u-greenCheckCircle"></span></td>
+                      <td class="icon-cell"><span class="icon u-greenCheckCircle"></span></td>
+                      <td class="icon-cell"><span class="icon u-grayFailCircle"></span></td>
+                    </tr>
+                    <tr>
+                      <td>Some feature name</td>
+                      <td class="icon-cell"><span class="icon u-grayFailCircle"></span></td>
+                      <td class="icon-cell"><span class="icon u-greenCheckCircle"></span></td>
+                      <td class="icon-cell"><span class="icon u-greenCheckCircle"></span></td>
+                    </tr>
+                    <tr>
+                      <td>Some feature name</td>
+                      <td class="icon-cell"><span class="icon u-grayFailCircle"></span></td>
+                      <td class="icon-cell"><span class="icon u-greenCheckCircle"></span></td>
+                      <td class="icon-cell"><span class="icon u-grayFailCircle"></span></td>
+                    </tr>
+                    <tr>
+                      <td>Some feature name</td>
+                      <td class="icon-cell"><span class="icon u-grayFailCircle"></span></td>
+                      <td class="icon-cell"><span class="icon u-greenCheckCircle"></span></td>
+                      <td class="icon-cell"><span class="icon u-greenCheckCircle"></span></td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 </main>
 {{ partial "footer.html" . }}
