add log in link to header

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -41,17 +41,22 @@
 		<nav>
 			<div class="container u-position--relative">
 				<span id="toggleNav" class="u-show--mobileTablet icon u-cursor--pointer"></span>
-				<ul class="nav-list paddingContainer">
+				<ul class="nav-list paddingContainer u-position--relative">
 					<li>
 						<a class="logo-link" href="{{ .Site.BaseURL }}">
 							<img width="109" src="{{ .Site.BaseURL }}images/logo@2x.png"/>
 						</a>
 					</li>
-					<ul id="headerLinks" class="header-links">
-						{{ range .Site.Menus.main }}
-							<li><a href="{{ .URL | relURL }}">{{ .Name }}</a></li>
-						{{ end }}
-					</ul>
+					<li>
+						<ul id="headerLinks" class="header-links">
+							{{ range .Site.Menus.main }}
+								<li><a href="{{ .URL | relURL }}">{{ .Name }}</a></li>
+							{{ end }}
+							<li class="log-in-link">
+								<a href="https://vendor.replicated.com" target="_blank">Log in</a>
+							</li>
+						</ul>
+					</li>
 				</ul>
 			</div>
 		</nav>
